plugins {
    id 'java'
    id 'application'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.netty.incubator:netty-incubator-codec-http3:0.0.30.Final'
    implementation 'io.netty.incubator:netty-incubator-codec-native-quic:0.0.74.Final:osx-x86_64'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
}

application {
    mainClass = 'ServerMain'
    applicationDefaultJvmArgs = [
        '-Dio.netty.leakDetection.level=DISABLED',
        '-Djava.library.path=.',
        '--add-opens=java.base/java.nio=ALL-UNNAMED'
    ]
}

task testQuic(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'QuicTest'
    jvmArgs = [
        '-Dio.netty.leakDetection.level=DISABLED',
        '-Djava.library.path=.',
        '--add-opens=java.base/java.nio=ALL-UNNAMED'
    ]
}

task runClient(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'ClientMain'
    jvmArgs = [
        '-Dio.netty.leakDetection.level=DISABLED',
        '-Djava.library.path=.',
        '--add-opens=java.base/java.nio=ALL-UNNAMED'
    ]
}
